test/files/neg/t409.check
t409.scala:6: error: class Case1 needs to be a trait to be mixed in
class Toto extends Expr with Case1(12);
                             ^
one error found
